Fix collapsed styles for matrix questions

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -376,7 +376,7 @@
   position: relative;
   overflow-x: auto;
 }
-
+.sd-question--table.sd-element--collapsed,
 .sd-question--table.sd-element--nested {
   overflow-x: visible;
 }
